Backend modules, frontend modules and webpack

--- a/assignment5/ui/src/.eslintrc
+++ b/assignment5/ui/src/.eslintrc
@@ -1,6 +1,7 @@
 {
   "extends": "airbnb",
   "env": {
+    "import/extensions": ["error", "always", { "ignorePackages": true } ],
     "browser": true
   },
   rules: {
