--- a/assignment5/ui/package.json
+++ b/assignment5/ui/package.json
@@ -8,8 +8,8 @@
   ],
   "scripts": {
     "start": "nodemon -e js, graphql -w . -w .env uiserver.js",
-    "compile": "babel src --presets @babel/react --out-dir public",
-    "watch": "babel src --presets @babel/react --out-dir public --watch --verbose",
+    "compile": "webpack --mode production",
+    "watch": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -27,6 +27,7 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
+    "babel-loader": "^8.1.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-import": "^2.20.1",
